# window_info

./: Cargo.toml  package.json
__test__/: index.spec.mjs
napi-rs-window/: index.d.ts  index.js
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: lib.rs  main.rs
