[package]
edition = "2024"
name = "window_info"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"
serde = { version = "1.0.219", features = ["derive"] }
objc2 = "0.6.1"
objc2-core-graphics = "0.3.1"
objc2-core-foundation = "0.3.1"
plist = "1.7.4"
libc = "0.2"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
